--- a/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
+++ b/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
@@ -45,6 +45,7 @@
 	                                          <option value="jtrp_col_affectedVersions">$i18n.getText("jtrp.report.wd.col.jtrp_col_affectedVersions")</option>
 	                                          <option value="jtrp_col_fixVersions">$i18n.getText("jtrp.report.wd.col.jtrp_col_fixVersions")</option>
 	                                          <option value="jtrp_col_resolution">$i18n.getText("jtrp.report.wd.col.jtrp_col_resolution")</option>
+	                                          <option value="jtrp_col_label">$i18n.getText("jtrp.report.wd.col.jtrp_col_label")</option>
 	                                          <option value="jtrp_col_parentIssueKey">$i18n.getText("jtrp.report.wd.col.jtrp_col_parentIssueKey")</option>
 	                                          <option value="jtrp_col_subTasks">$i18n.getText("jtrp.report.wd.col.jtrp_col_subTasks")</option>
 	                                          <option value="jtrp_col_worklogDescription">$i18n.getText("jtrp.report.wd.col.jtrp_col_worklogDescription")</option>
@@ -123,6 +124,7 @@
                                 #set($isNotShowTimeSpent = !$selectedWorklogDetailsColumns.contains("jtrp_col_timeSpent"))
                                 #set($isNotShowParentIssueKey = !$selectedWorklogDetailsColumns.contains("jtrp_col_parentIssueKey"))
                                 #set($isNotShowSubTasks = !$selectedWorklogDetailsColumns.contains("jtrp_col_subTasks"))
+                                #set($isNotShowLabels = !$selectedWorklogDetailsColumns.contains("jtrp_col_label"))
                                 
                                 #set($defaultOrder = "ASC")
                                 #set($isAscOrder = $order.equals("ASC"))
@@ -418,7 +420,14 @@
                                             <span>
                                         </th>
                                         
-                                          #if( $orderColumn.equals("jtrp_col_parentIssueKey") ) 
+                                        <th data-jtrp-col-name="jtrp_col_label"
+                                          class="jtrp_col_label jttp-tablesorter-header jttp-aui-table-column-unsortable" style="#if( $isNotShowLabels )display:none;#end">
+                                            <span>
+                                              $i18n.getText("jtrp.report.wd.col.jtrp_col_label")
+                                            <span>
+                                        </th>
+                                        
+                                        #if( $orderColumn.equals("jtrp_col_parentIssueKey") ) 
                                           #if( $isAscOrder ) 
                                             #set($orderName = 'DESC') 
                                             #set($className = 'jttp-tablesorter-headerAsc') 
@@ -627,6 +636,14 @@
                                         <td class="jtrp_col_affectedVersions" style="#if( $isNotShowAffectedVersions )display:none;#end">#if ( !$wd.issueAffectedVersions.isEmpty() ) #foreach ( $affectedVersion in $wd.issueAffectedVersions )#if($velocityCount> 1),#end $affectedVersion #end #end</td>
                                         <td class="jtrp_col_fixVersions" style="#if( $isNotShowFixVersions )display:none;#end">#if ( !$wd.issueFixedVersions.isEmpty() ) #foreach ( $fixedVersion in $wd.issueFixedVersions )#if($velocityCount> 1),#end $fixedVersion #end #end</td>
                                         <td class="jtrp_col_resolution" style="#if( $isNotShowResolution )display:none;#end">#if ( !$wd.resolutionName )$i18n.getText("jtrp.picker.unresolved.value") #else $wd.resolutionName #end</td>
+                                        <td class="jtrp_col_label" style="#if( $isNotShowLabels )display:none;#end">#if ( !$wd.labels.isEmpty() )
+                                            #set($end=$wd.labels.size() - 1)
+                                            #set($range = [0..$end])
+                                            <ul class="labels">
+                                            #foreach($i in $range)
+                                            #set($label=$wd.labels.get($i))
+                                            <li><a class="lozenge" title="$label"><span>$label</span></a></li>
+                                        #if($i<$end) #end #end </ul> #end</td>
                                         <td class="jtrp_col_parentIssueKey" style="#if( $isNotShowParentIssueKey )display:none;#end">#if ( $wd.parentIssueKey ) <a href="$contextPath/browse/$wd.parentIssueKey" onmouseover="everit.reporting.main.onmouseOverParentIssueKey('$wd.parentIssueKey' ,this)" class="issue-link">$wd.parentIssueKey</a>#end</td>
                                         <td class="jtrp_col_subTasks" style="#if( $isNotShowSubTasks )display:none;#end">#if ( !$wd.subTasks.isEmpty() )
                                             #set($end=$wd.subTasks.size() - 1)
