--- a/src/main/resources/templates/timetracker/adminsettings.vm
+++ b/src/main/resources/templates/timetracker/adminsettings.vm
@@ -121,14 +121,16 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
       </div>
       <div class="description">$i18n.getText("plugin.setting.nonestimated.issues.help")</div>
     </div>
-         <div class="field-group">
-    <label>$i18n.getText("plugin.settings.nonestimated.notification.time")</label>
-     <input id="nonEstimatedRemindTime" class="text short-field"
+    <div class="field-group">
+      <label>$i18n.getText("plugin.settings.nonestimated.notification.time")</label>
+      <input id="nonEstimatedRemindTime" class="text short-field"
                       value="$nonEstimatedRemindTime" 
                       name="nonEstimatedRemindTime" tabindex="2"
                       data-jttp-timeformat="$timeFormatPattern"
+                      #if($nonEstSelect == "nonEstNone") readonly #end
                       list="time-options" autocomplete="off">
-     </div>
+      <div class="description">$i18n.getText("plugin.settings.nonestimated.notification.time.help")</div>
+    </div>
     <div class="field-group">
       <label for="issueSelect">$i18n.getText("plugin.setting.non.working.issues")</label>
       <select class="hidden"
